--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prepare": "npx husky install"
   },
   "dependencies": {
+    "bulma": "^0.9.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
